modules/gdscript/tests/scripts/parser/errors/invalid_array_destructuring_with_missing_elements.gd
func test():
    var [a, , c] = [1, 2, 3]
